src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    @apply w-screen overflow-x-clip
}

::-moz-selection { /* Code for Firefox */
    @apply text-white bg-black
}

::selection {
    @apply text-white bg-black
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

@font-face {
    font-family: Inter;
    src: url(./assets/fonts/inter.ttf);
}


@layer components {
    .col-entire-section {
        @apply relative border-r border-black bg-white
    }

    .col-spacer {
        @apply border border-gray-200 bg-slate-400
    }

    /* Animates and expands the content box width*/
    .col-content-expand {
        width: 100%;
        animation: 0.7s column-spacer-expand ease-in-out;
    }

    /* Animates and SHRINKS the content box width*/
    .col-content-shrink {
        width: 100px;
        animation: 0.7s column-spacer-shrink ease-in-out;
        @apply bg-white
    }

    /* CSS for the header part of the column that includes the rotated title */
    .col-header {
        @apply  h-screen grid place-content-center min-w-[100px] max-w-[100px] bg-white z-10 cursor-pointer
    }

    /* Rotated title in the header section */
    .col-header-title {
        @apply font-inter text-3xl font-bold uppercase rotate-[270deg] bg-white
    }

    /* Display animation when a section is shrunk. */
    .col-header-visible {
        opacity: 1;
        animation: 0.8s enable-content-opacity ease-in-out;
    }

    /* Display animation when a section is clicked on and expanded */
    .col-header-hidden {
        opacity: 0;
        animation: 0.3s disable-content-opacity ease-in-out;
    }


    .grid-arrangement {
        grid-template-rows: 1fr 1fr max-content 1fr 1fr;
    }
    .col-content {
        @apply grid place-content-center h-screen z-50
    }

    .col-text {
        @apply xl:min-w-[1000px] xl:max-w-[1000px] pl-[100px]
    }

    .col-text::-webkit-scrollbar {
        display: none;
    }

    .col-text-grid {
        grid-template-columns: 1fr 3fr;
    }

    .col-content-visible {
        opacity: 1;
        animation: 0.6s enable-content-opacity ease-in-out;
    }

    .col-content-hidden {
        opacity: 0; 
        animation: 0.7s disable-content-opacity ease-in-out;
    }

    .col-content-delayed-animation--visible {
        opacity: 1;
        animation: 1.5s enable-content-opacity ease-in-out;
    }

    .col-content-delayed-animation--hidden {
        opacity: 0;
        animation: 0.7s disable-content-opacity ease-in-out;
    }

    .font-inter {
        font-family: Inter, sans-serif;
    }


    .scroll-indicator-show {
        opacity: 1;
        animation: 0.3s enable-content-opacity ease-in-out;
    }

    .scroll-indicator-hide {
        opacity: 0;
        animation: 0.3s disable-content-opacity ease-in-out;
    }
}

@keyframes column-spacer-expand {
    from { width: 100px; }
    to { width: 100%; }
}

@keyframes column-spacer-shrink {
    from { width: 100%; }
    to { width: 100px; }
}

@keyframes disable-content-opacity {
    from { opacity: 1; }
    to { opacity: 0; }
}

@keyframes enable-content-opacity {
    from { opacity: 0; }
    to { opacity: 1; }
}

